# erp-python

./: .env.example  .env.template  .gitignore  .gitlab-ci.yml  .python-version  Dockerfile  README.md  dev-requirements.txt  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  erp-deploy-backend.yaml  main.py  metadata.py  pyproject.toml  readme-old.md  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  initial_data.py  main.py
app/alembic/: env.py
app/api/V1/routes/: api.py  assing.py  auth.py  dev.py  institution.py  permission.py  rols.py  (+1 more)
app/api/api_v1/: accounts.py  auth.py  users.py
app/config/: redis.py  sql.py
app/core/: config.py
app/core/V1/: security.py  sessions.py
app/db/: crud.py  models.py  session.py
app/models/V1/: mixins.py  user_api_model.py
app/schemas/V1/: api_scheme.py  config_scheme.py  jwt_scheme.py  log_schema.py  permission_scheme.py  rol_api_scheme.py  user_scheme.py
app/services/V1/: crud_api.py  crud_assing.py  crud_institution.py  crud_permission.py  crud_roles.py  crud_users.py
app/utils/: exeptions.py
backend/: conftest.py  requirements.txt
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
database/: database.sql
nginx/: Dockerfile  nginx.conf  nginx.conf.template
scripts/: build.sh
test/fixtures/: __init__.py  test_database.py
test/unit/: test_config.py  test_core_security.py  test_core_sessions.py  test_crud_api.py  test_crud_instituions.py  test_crud_users.py  test_mixin_models.py  test_sheme.py  test_user_api_model.py
(+4 files in other folders)
