[tool.black]
line-length = 80
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ruben Vasquez <ruvasqm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
authlib = "^1.2.1"
fastapi = "^0.104.1"
httpx = "^0.25.1"
ipython = "^8.17.2"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.23.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sqlalchemy-utils = "^0.41.1"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"
